WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129752
ObjC exception when dropping files into a WKView: drag and drop uses code from WebKit.framework
https://bugs.webkit.org/show_bug.cgi?id=129752
Summary
ObjC exception when dropping files into a WKView: drag and drop uses code fro...
Simon Fraser (smfr)
Reported
2014-03-05 11:51:09 PST
ObjC exception when dropping files into a WKView: drag and drop uses code from WebKit.framework
Attachments
Patch
(15.43 KB, patch)
2014-03-05 11:54 PST
,
Simon Fraser (smfr)
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-05 11:51:39 PST
<
rdar://problem/9197507
>
Simon Fraser (smfr)
Comment 2
2014-03-05 11:54:27 PST
Created
attachment 225897
[details]
Patch
Enrica Casucci
Comment 3
2014-03-05 12:02:42 PST
Comment on
attachment 225897
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225897&action=review
Looks good
> Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:722 > + NSURLRequest *request = [[NSURLRequest alloc] initWithURL:URL];
RetainPtr and avoid release?
> Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:920 > + */
Comment style
> Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:934 > + return rangeOfURLScheme(stringByTrimmingWhitespace(string)).location != NSNotFound;
Maybe you could use CFStringTrimWhitespace.
Simon Fraser (smfr)
Comment 4
2014-03-05 12:10:57 PST
https://trac.webkit.org/r165118
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug