Source/WebKit2/WebProcess/WebCoreSupport/mac/WebEditorClientMac.mm
@@ -46,8 +46,8 @@
 #import <WebCore/KeyboardEvent.h>
 #import <WebCore/NotImplemented.h>
 #import <WebCore/Page.h>
-#import <WebKit/WebResource.h>
-#import <WebKit/WebNSURLExtras.h>
+#import <WebCore/WebCoreNSURLExtras.h>
+#import <WebKit/WebResource.h> // FIXME: WebKit2 should not include WebKit headers.
 
 using namespace WebCore;
 
@@ -75,19 +75,19 @@ void WebEditorClient::handleInputMethodKeydown(KeyboardEvent* event)
     
 NSString *WebEditorClient::userVisibleString(NSURL *url)
 {
-    return [url _web_userVisibleString];
+    return userVisibleString(url);
 }
 
 NSURL *WebEditorClient::canonicalizeURL(NSURL *url)
 {
-    return [url _webkit_canonicalize];
+    return URLByCanonicalizingURL(url);
 }
 
 NSURL *WebEditorClient::canonicalizeURLString(NSString *URLString)
 {
     NSURL *URL = nil;
-    if ([URLString _webkit_looksLikeAbsoluteURL])
-        URL = [[NSURL _web_URLWithUserTypedString:URLString] _webkit_canonicalize];
+    if (looksLikeAbsoluteURL(URLString))
+        URL = URLByCanonicalizingURL(URLWithUserTypedString(URLString, nil));
     return URL;
 }
     
